--- a/CSS/Estudando o css/style.css
+++ b/CSS/Estudando o css/style.css
@@ -1,5 +1,4 @@
-@import 'https://fonts.googleapis.com/css2?family=Ranchers&display=swap';'
-
+@import 'https://fonts.googleapis.com/css2?family=Ranchers&display=swap';
 h1 {
     color: blue;
     font-family: 'Ranchers', cursive;
